# test-minimal-qtquick

./: CMakeLists.txt  main.cpp
